added compatibility with bob's mods, refactored a few recipes to be more vanilla style.

--- a/locale/en/recipe-name.cfg
+++ b/locale/en/recipe-name.cfg
@@ -4,4 +4,7 @@ hydrogen-recipe=Water Splitting
 hydrogen-solidifaction=Hydrogen Metallification Process
 hydrogen-coal-enrichment=Hydrogen Cola Enrichment Process
 hydrogen-fuel-enrichment=Hydrogen Fuel Enrichment Process
+hydrogen-mod-fuel-cell=Hydrogen Fuel Cell
 uranium-isotope-processing=Uranium Isotope Generation
+hybrid-fuel-cell=Hybrid Nuclear Fuel Processing
+deuterium-processing=Deuterium Processing
