--- a/locale/en/item-name.cfg
+++ b/locale/en/item-name.cfg
@@ -5,5 +5,6 @@ solid-hydrogen=Metalic Hydrogen
 hydrogen-coal=Enriched Coal
 hydrogen-fuel=Enriched Solid Fuel
 empty-hydrogen-cell=Empty Hydrogen Cell
-hydrogen-cell=Hydrogen Cell
+hydrogen-mod-fuel-cell=Hydrogen Fuel Cell
 hydrogen-canister=Hydrogen Canister
+hybrid-fuel-cell=Hybrid Nuclear Fuel Cell
