--- a/locale/en/technology-name.cfg
+++ b/locale/en/technology-name.cfg
@@ -6,6 +6,8 @@ fuel-enrichment=Fuel Enrichment
 coal-enrichment=Coal Enrichment
 coal-hydrogen-liquefaction=Coal liquifaction using hydrogen
 hydrogen-cell=Hydrogen Cell
+hydrogen-mod-fuel-cell=Hydrogen Fuel Cell
+hybrid-nuclear-fuel=Hybrid Nuclear Fuel Cell
 
 [technology-description]
 water-splitting=Extract hydrogen gas from water. The oxygen is wented in the process.
@@ -14,4 +16,5 @@ hydrogen-metallification=Turn hydrogen into a solid material. Can be burned as a
 coal-enrichment=Increase the energy potential of coal.
 fuel-enrichment=Increase the energy potential of solid fuel.
 coal-hydrogen-liquefaction=Coal liquifaction with hydrogen infusion. Does not use any catalysts, just hydrogen and coal.
-hydrogen-cell=Pack hydrogen fuel into a dense cell for more speed, acceleration and no pollution.
+hydrogen-mod-fuel-cell=Pack hydrogen fuel into a dense cell for more speed, acceleration and no pollution.
+hybrid-nuclear-fuel=Hybrid fusion/fission fuel cell.
